--- a/.github/workflows/make-lint.yml
+++ b/.github/workflows/make-lint.yml
@@ -11,3 +11,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run linter
         run: make lint
+        with:
+          coverageLocations: ${{github.workplace}}/node_modules/
