--- a/.github/workflows/make-lint.yml
+++ b/.github/workflows/make-lint.yml
@@ -9,6 +9,6 @@ jobs:
       # Check-out repository under GitHub workspace
       # https://github.com/actions/checkout
       - uses: actions/checkout@v2
-      - uses: eslint-config-airbnb/eslint-action@1.0.2
+      - uses: eslint-config-airbnb
       - name: Run linter
         run: make lint
