--- a/.github/workflows/make-lint.yml
+++ b/.github/workflows/make-lint.yml
@@ -9,6 +9,7 @@ jobs:
       # Check-out repository under GitHub workspace
       # https://github.com/actions/checkout
       - uses: actions/checkout@v2
-      - uses: eslint-config-airbnb@latest
+      - name: Install modules
+        run: make install
       - name: Run linter
         run: make lint
