--- a/.github/workflows/make-lint.yml
+++ b/.github/workflows/make-lint.yml
@@ -9,6 +9,10 @@ jobs:
       # Check-out repository under GitHub workspace
       # https://github.com/actions/checkout
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        name: 'setup node'
+        with:
+          node-version: '13.x'
       - name: Install modules
         run: make install
       - name: Run linter
