--- a/.github/workflows/make-lint.yml
+++ b/.github/workflows/make-lint.yml
@@ -17,3 +17,5 @@ jobs:
         run: make install
       - name: Run linter
         run: make lint
+        with:
+          path: ./node_modules/.bin/eslint
