--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "brain-games.js",
   "type": "module",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "scripts": {
     "eslinter": "eslint src/**/*.{js,jsx,ts,tsx}",
